--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,9 @@
+.btn-link {
+	color: black;
+	text-decoration: none;
+	text-align: center;
+} 
+
 .navbar {
 	position:fixed !important;
 	z-index:2;
