--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#tagline-features">Features</a>
             
         </li class="nav-item">
-            <a href="{{url_for('takethequiz')}}" class="btn btn-outline-successful action-btn" >Take Quiz</a>
+            <a href="{{url_for('takethequiz')}}" class="btn btn-link btn-outline-successful action-btn" > Take the Quiz</a>
         </ul>
     </div>
 </nav>
@@ -69,7 +69,7 @@
 <!-- CALL TO ACTION-->
  <div class="action-call">
     <p class="second-tagline">Is your skin not feeling at its best?</p>
-    <a href="{{url_for('takethequiz')}}" class="btn btn-outline-successful action-btn" >Take Quiz</a>
+    <a href="{{url_for('takethequiz')}}" class="btn btn-link btn-outline-successful action-btn" >Take Quiz</a>
    
 </div>
 
