--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -22,9 +22,6 @@
 
 <body id="quiz-body">
 
-  <div>
-    {{product}}
-  </div>
 
 <form method="post" action="/quiz">
 
@@ -109,9 +106,12 @@
 </div>
 
  <div id="result-btn">
-    <input class="btn btn-outline-successful action-btn" type="submit" id="submit">Get  Result</input> 
+    <input class="btn btn-outline-successful action-btn" type="submit" id="submit"></input> 
 </div>
 
+  <div>
+    {{product}}
+  </div>
 </form>
 
 <!-- CONTACT SECTION-->
