Put botton back

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,10 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#tagline-features">Features</a>
-            
-        </li class="nav-item">
+        </li>
+        <li class="nav-item">
             <a href="{{url_for('takethequiz')}}" class="btn btn-link btn-outline-successful action-btn" > Take the Quiz</a>
+        </li>
         </ul>
     </div>
 </nav>
