--- a/static/style.css
+++ b/static/style.css
@@ -254,6 +254,12 @@
 	padding: 60px 0px 60px 0px;
 }
 
+.result-text {
+	font-family: 'Open Sans', sans-serif;
+	font-size:30px;
+	text-align:center;
+}
+
 .quiz-checkbox {
 	border-radius: 15px;
 	padding-right: 10px;
@@ -283,6 +289,3 @@
 @media (min-width:960px) { body {font-size:1.2rem;} } 
 @media (min-width:1100px) { body {font-size:1.5rem;} }
 
-
-font-family: 'Quicksand', sans-serif;
-font-family: 'Open Sans', sans-serif;
