--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -110,8 +110,9 @@
 </div>
 
   <div>
-    {{product}}
+    <p class="result-text">You should use: {{product}}</p>
   </div>
+    
 </form>
 
 <!-- CONTACT SECTION-->
