--- a/templates/index.html
+++ b/templates/index.html
@@ -38,10 +38,8 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#tagline-features">Features</a>
-        </li>
-        <li class="nav-item">
-            <a href="{{url_for('takethequiz')}}" class="btn btn-link btn-outline-successful action-btn" > Take the Quiz</a>
-        </li>
+            </li>
+            <a href="{{url_for('takethequiz')}}" class="nav-link btn btn-link btn-outline-successful action-btn" > Take the Quiz</a>
         </ul>
     </div>
 </nav>
