--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -109,9 +109,9 @@
     <input class="btn btn-outline-successful action-btn" type="submit" id="submit"></input> 
 </div>
 
-  <div>
-    <p class="result-text">You should use: {{product}}</p>
-  </div>
+<div class="result-text">
+   <p class="result-text">You should use: {{product}}</p>
+</div>
     
 </form>
 
