removed action-botton

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <li class="nav-item">
             <a class="nav-link" href="#tagline-features">Features</a>
             </li>
-            <a href="{{url_for('takethequiz')}}" class="nav-link btn btn-link btn-outline-successful action-btn" > Take the Quiz</a>
+            <a href="{{url_for('takethequiz')}}" class="nav-link btn btn-link btn-outline-successful" > Take the Quiz</a>
         </ul>
     </div>
 </nav>
